<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,ExtraTranslation">
    <string name="app_name">chucaiji</string>
    <string name="back">返回</string>
    <string name="serial_title">串口配置</string>
    <string name="port_qudongban">驱动板串口</string>
    <string name="port_qudongban_bote">驱动板波特率</string>
    <string name="port_rfid">RFID串口</string>
    <string name="port_rfid_bote">RFID串口波特率</string>
    <string name="port_485">主从485串口</string>
    <string name="port_485_bote">主从485串口波特率</string>
    <string name="background_tcn_delete">删除</string>
    <string name="background_menu_close">关闭</string>
    <string name="select_device">请选择要连接的设备</string>
    <string name="scaning"> 正在扫描... ...</string>
    <string name="button_scan">扫描</string>
    <string name="button_back">返回</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="chooese">选择</string>
    <string name="base_saving">保存</string>
</resources>